Update locale strings, hero img fix

--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -935,6 +935,10 @@ af:
         line 2: "verskillende tale - die Bybel wat"
         line 3: "orals saam met jou gaan."
         download: "Laai Nou Af"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "Toepaslikheid"
         relevancy copy: "In vorige geslagte was die toegang wat mense tot die Bybel gehad het baie beperk. Vandag, is dit nie meer die geval nie. Baie mense wat toegang het tot die Bybel, dink egter dat sy boodskap nie van toepassing op hul lewens is nie. Op dieselfde tyd, is daar ander wat glo dat daar 'n verband is tussen die Bybel en hulle daaglikse ondervindinge."
