--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -935,6 +935,10 @@ ca:
         line 2: "idiomes diferents - La Bíblia"
         line 3: "que va amb tu a qualsevol lloc."
         download: "Descarrega-la ara"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "Rellevància"
         relevancy copy: "En les generacions passades, la gent tenia un accés molt limitat a la Bíblia. Avui dia, això ja no és el cas. No obstant això, moltes persones que tenen accés a la Bíblia creuen que el seu missatge no s'aplica a la seva vida. Alhora, hi ha altres que creuen que hi ha una connexió entre la Bíblia i les seves experiències quotidianes."
