--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -933,6 +933,10 @@ id:
         line 2: "bahasa berbeda - Alkitab"
         line 3: "yang selalu bersama Anda."
         download: "Unduh Sekarang"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "Relevansi"
         relevancy copy: "Di generasi terdahulu, akses ke Alkitab sangat terbatas. Hari ini, tidak lagi masalah. Namun, banyak orang yang memiliki akses ke Alkitab berpikir bahwa pesannya tidak berlaku dalam hidup mereka. Pada saat bersamaan, ada mereka yang percaya adanya hubungan antara Alkitab dengan pengalaman keseharian mereka."
