--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -108,10 +108,10 @@ ko:
         story text 3: "요셉, 마리아, 그리고 말구유의 아기 예수"
         story text 4: "천사들이 예수의 탄생을 전하기 위해 목자들에게 나타남"
         story text 5: "예수님이  신체 장애자를 고치시다"
-        feature 1: "어린이들을 위한<br>무료 성경"
+        feature 1: "어린이들을 위한<br/>무료 성경"
         feature 2: "스마트폰과 타블렛을 위한 움직이는 이야기책"
-        feature 3: "만지면 반응하는<br>아름다운 그림 성경"
-        feature 4: "게임과 활동을 통해<br>말씀 기억하기"
+        feature 3: "만지면 반응하는<br/>아름다운 그림 성경"
+        feature 4: "게임과 활동을 통해<br/>말씀 기억하기"
         feature 5: "어린이들이 사용하기 쉬운 성경"
         share: 
             tell friends: "어린이 성경 앱을 널리 알려주세요!"
@@ -933,6 +933,10 @@ ko:
         line 2: "수백개의 언어로 수백개의"
         line 3: "번역본을 제공하는 성경앱."
         download: "지금 다운로드"
+    download bafk ad: 
+        title: "어린이용 성경 앱을 다운로드하세요."
+        description copy: "어린이용 성경앱은 여러분의 자녀들이 예수님에 관한 성경 이야기를 배우는데 참 좋은 방법입니다."
+        download: "지금 다운로드하세요."
     about page: 
         relevancy: "관련성"
         relevancy copy: "과거 세대에는 성경을 접하는 방법이 아주 제한되어 있었지만 지금은 그렇지 않습니다.  하지만, 성경을 접하면서도 말씀이 자신의 삶과는 아무런 관련이 없다고 생각하시는 분들도 많이 있습니다. 동시에 성경이 일상의 삶에 직결되어있다고 믿는 분들도 있습니다."
