--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -935,6 +935,10 @@ sq:
         line 2: "gjuhë të ndryshme - Bibla"
         line 3: "që shkon me ju kudo."
         download: "Shkarko tani"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "Përshtatshmëri"
         relevancy copy: "Në brezat e mëparshëm, mundësia që njerëzit kishin për të përdorur Biblën ishte shumë e kufizuar. Sot kjo nuk është më një problem. Sidoqoftë, shumë njerëz që kanë mundësi të përdorin Biblën mendojnë se mesazhi i saj nuk zbatohet në jetën e tyre. Në të njëjtën kohë, ka të tjerë që besojnë se ka një lidhje midis Biblës dhe përvojave të jetës së tyre të përditshme."
