--- a/config/locales/ta.yml
+++ b/config/locales/ta.yml
@@ -935,6 +935,10 @@ ta:
         line 2: "பல்வேறு மொழிகள் - the Bible"
         line 3: "அது உங்களோடு எங்கும் செல்கிறது."
         download: "இப்போது பதிவிறக்கம் செய்க"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "பொருத்தம்"
         relevancy copy: "கடந்த தலைமுறைகளில்,  பைபிளை வாசிக்க  மக்களுக்கு உண்டாயிருந்த வழிகள் மிக குறைவாக மட்டுமே இருந்தது . இன்று, அது போல அல்ல சூழ்நிலை. இருந்தபோதிலும்  பைபிளை வாசிக்க வசதி உள்ள மக்கள் பலரும்   அதன் செய்தி தங்கள் வாழ்விற்கு பொருந்தாது என்று தான் நினைக்கிறார்கள். அதே நேரத்தில், தங்களுடைய அன்றாட அனுபவங்களுக்கும் பைபிளுக்கும்   இடையே ஒரு தொடர்பு  உள்ளதாக  நினைக்கும் மற்றவர்களும் இருக்கிறார்கள்."
