--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -196,7 +196,7 @@ tr:
     reader: "Okuyucu"
     lifechurch short url: "LifeChurch.tv"
     about: "Hakkında"
-    versions link: "Versions"
+    versions link: "Tercümeler"
     jobs: "Çalışma İmkânları"
     privacy policy: "Gizlilik Politikası"
     terms: "Koşullar"
@@ -670,7 +670,7 @@ tr:
         labels label: "Etiketler:"
         title: "Yer İmleri"
         my labels: "Etiketlerim"
-        all labels: "Hepsini Gör"
+        all labels: "Hepsini Göster"
         not found: "Yer imleri en sevdiğiniz ayetleri veya herhangi bir kitapta son okuduğunuz bölümü çabukça bulmanızı sağlar. Yer imi nasıl eklenir: Kutsal Kitap Okuyucusunda bir ayet seçin. Ondan sonra okuyucunun araç çubuğundaki Seçim düğmesini tıklayın."
         other user not found: "%{username} henüz yer imi kaydetmedi."
         creation form errors: "Şu hata(lar) yer iminizin kaydedilmesini engelledi:"
@@ -718,14 +718,14 @@ tr:
             readings 5 or more: "okumalar"
         stats: 
             friends reading: 
-                one: "%{count} friend subscribed to this plan"
-                other: "%{count} friends subscribed to this plan"
+                one: "%{count} arkadaşınız bu planı başlattı"
+                other: "%{count} arkadaşınız bu planı başlattı"
             friends completed: 
-                one: "%{count} friend has completed this plan"
-                other: "%{count} friends have completed this plan"
-            total completions: "Over %{count} completions"
-            view all: "View All"
-            close: "Close"
+                one: "%{count} arkadaşınız bu planı tamamladı"
+                other: "%{count} arkadaşınız bu planı tamamladı"
+            total completions: "%{count} oranından fazlası tamamlandı"
+            view all: "Hepsini Göster"
+            close: "Kapat"
         settings: "Ayarlar"
         privacy: 
             visible to friends?: "Arkadaşlarınızın okuma planı etkinliğinizi görmesini istiyor musunuz?"
@@ -935,6 +935,10 @@ tr:
         line 2: "değişik çeviriyi içeren, sizinle"
         line 3: "her yere gidebilen Kutsal Kitap."
         download: "Hemen İndir"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "Kutsal Kitap’a Ulaşmak"
         relevancy copy: "Geçmiş zamanlarda Tevrat, Zebur ve İncil’i bulmak çok zor olurdu. Kutsal Kitap'ı ellerine alıp okuyanlar azdı. Şükürler olsun ki, bugün herkes kolayca bir İncil’i bulabilir. Ancak, ellerinde Kutsal Kitap olan insanların birçoğu onun öğretilerinin bugünkü yaşamlarına alâkasız olduğunu düşünürler. Buna karşın Kutsal Kitap'ın günlük hayatlarında etki bıraktığını inanan bir sürü kişi vardır."
@@ -1015,7 +1019,7 @@ tr:
                 now skipped: "Bu sayfa artık gösterilmeyecek."
             features: 
                 read heading: "Kutsal Kitap'ı okuyun."
-                read description: "Take your choice from <a href='%{versions_path}'>hundreds of Bible versions and languages</a>. Compare two versions side by side. You can even choose your font and display size. Make your online Bible experience just the way you like it."
+                read description: "Yüzlerce Kutsal Kitap tercüme ve dil seçeneği arasından <a href='%{versions_path}'>dilediğinizi seçin</a>. İki farklı tercümeyi yan yana karşılaştırabilirsiniz. Yazı ve görüntüleme boyutunu bile tercihinize göre ayarlayabilirsiniz. Çevrimiçi kullandığınız Kutsal Kitap'ı tam istediğiniz şekilde okumanın keyfini yaşayın."
                 study heading: "Kutsal Kitap'ı çalışın."
                 study description: "En sevdiğiniz renkleri kullanarak <strong>vurgalayın</strong>, en sevdiğiniz Kutsal Kitap ayetleri <strong>yer imlerinize ekleyin</strong>, ve öğrendikleriniz hakkında notlar yazın. Tanrı'nın Sözü ile vakit geçirmekten öte, Kutsal Kitap ile etkileşiminizin tarihini kaydediyorsunuz."
                 subscribe heading: "Kutsal Kitap okuma planlarına abone olun."
