--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -933,6 +933,10 @@ zh-TW:
         line 2: "上百種不同的語言 —— 這聖經"
         line 3: "都能隨身跟着您"
         download: "現在就下載"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "適切性"
         relevancy copy: "在過去的年代裡，人們接觸聖經的機會非常有限。今時今日，這已不再是問題了。雖然，許多有機會接觸到聖經的人認為上帝的話語在他們的生活裡起不了作用，但是，也有許多人相信聖經與他們每一天的生活經驗是息息相關的。"
