--- a/config/locales/ms.yml
+++ b/config/locales/ms.yml
@@ -933,6 +933,10 @@ ms:
         line 2: "bahasa yang berbeza - Alkitab yang"
         line 3: "menurut anda ke manapun."
         download: "Download Sekarang"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "Relevan"
         relevancy copy: "Pada zaman yang lalu, akses kepada Alkitab memang terbatas. Kini tidak sedemikian lagi. Namun, ramai orang merasa bahawa mesej Alkitab tidak terguna dalam kehidupan mereka, walaupun orang lain percaya bahawa Alkitab memang terhubung dengan pengalaman seharian mereka."
