--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -939,6 +939,10 @@ pl:
         line 2: "językach - Biblia, która"
         line 3: "idzie z tobą wszędzie."
         download: "Pobierz teraz"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "Odniesienie do życia"
         relevancy copy: "W poprzednich pokoleniach ludzie mieli bardzo ograniczony dostęp do Biblii. Dzisiaj jest już inaczej. Niestety, jednak wielu ludzi, którzy mają dostęp do Biblii uważa, że jej treść nie ma zastosowania w ich życiu. Są jednak także ci, którzy wierzą, że istnieje związek między Biblią a doświadczeniami ich codziennego życia."
