--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -937,6 +937,10 @@ ro:
         line 2: "limbi diferite - Biblia care"
         line 3: "te însoțește pretutindeni."
         download: "Descarcă acum"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "Relevanță"
         relevancy copy: "În generațiile anterioare, accesul oamenilor la Biblie era foarte limitat. Astăzi lucrurile stau altfel. Totuși, mulți oameni care au acces la Biblie cred că mesajul ei nu se aplică pentru viața lor. În același timp, sunt alții care cred că există o legătură între Biblie și experiența lor de zi cu zi."
