--- a/config/locales/th.yml
+++ b/config/locales/th.yml
@@ -933,6 +933,10 @@ th:
         line 2: "ต่างภาษา - พระคัมภีร์"
         line 3: "ที่จะไปกับคุณทุกหนทุกแห่ง"
         download: "ดาวน์โหลดเดี๋ยวนี้"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "ความสัมพันธ์"
         relevancy copy: "ในคนรุ่นก่อนๆ ผู้คนเข้าถึงได้พระคัมภีร์ได้อย่างจำกัด แต่ปัจจุบันนี้ไม่มีข้อจำกัดอีกต่อไปแล้ว อย่างไรก็ตาม ยังมีคนมากมายที่อ่านพระคัมภีร์ คิดว่า ข้อความเหล่านั้นไม่สามารถนำมาประยุกต์ใช้ได้ในชีวิต ขณะเดียวกัน มีคนอีกมากที่เชื่อว่า มีความเชื่อมโยงระหว่างพระคัมภีร์และประสบการณ์ประจำวันของพวกเขา"
