--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -933,6 +933,10 @@ vi:
         line 2: "các ngôn ngữ khác nhau - Kinh Thánh"
         line 3: "đồng hành cùng bạn ở mọi nơi."
         download: "Tải bây giờ"
+    download bafk ad: 
+        title: "Download the Bible App for Kids"
+        description copy: "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+        download: "Download Now"
     about page: 
         relevancy: "Tầm quan trọng"
         relevancy copy: "Trong quá khứ, con người không có nhiều cơ hội để tìm đọc Kinh Thánh, nhưng ngày nay mọi sự đã khác. Tuy vậy những người có cơ hội tiếp cận Kinh Thánh lại nghĩ thông điệp này không áp dụng cho cuộc sống của họ. Cùng một lúc đó, nhiều người khác tin rằng có sự liên hệ chặt chẽ giữa Kinh Thánh và trải nghiệm hằng ngày của họ."
