--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -933,6 +933,10 @@ zh-CN:
         line 2: "上百种不同语言的译本"
         line 3: "让圣经随时随地陪伴您！"
         download: "点击下载圣经软件"
+    download bafk ad: 
+        title: "下载儿童圣经软件"
+        description copy: "儿童圣经软件是您孩子学习有关耶稣故事的好途径。"
+        download: "现在就下载"
     about page: 
         relevancy: "关联"
         relevancy copy: "在过去的年代，人们能够接触到圣经的方式是很有限的。现今的时代，这不再是个问题了。然而，很多有机会接触到圣经的人认为圣经当中的信息对于他们的生活完全没有用处。与此同时，有另外一些人却相信圣经与他们每日的生活紧密相连。"
