Downloading Strings from Smartling

--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -129,8 +129,8 @@ ko:
             in partnership: "결연을 맺어"
             one hope: "One hope: 어린이들을 위한 특별한 성경 콘텐츠"
         links: 
-            apple: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8"
-            google: "http://play.google.com/store/apps/details?id=com.bible.kids"
+            apple: "https://itunes.apple.com/kr/app/bible-for-kids/id668692393?mt=8"
+            google: "https://play.google.com/store/apps/details?id=com.bible.kids&featurem&hl=ko"
             amazon: "http://www.amazon.com/gp/product/B00GURLC40"
     now: "실시간 현황"
     celebrating 50MM: "축 5천만째 설치!"
