New Smartling Locale Strings

--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -196,7 +196,7 @@ es-ES:
     reader: "Lector"
     lifechurch short url: "LifeChurch.tv"
     about: "Acerca de"
-    versions link: "Versions"
+    versions link: "Versiones"
     jobs: "Trabajos"
     privacy policy: "Políticas de privacidad"
     terms: "Términos"
@@ -724,8 +724,8 @@ es-ES:
                 one: "%{count} friend has completed this plan"
                 other: "%{count} friends have completed this plan"
             total completions: "Over %{count} completions"
-            view all: "View All"
-            close: "Close"
+            view all: "Ver Todo"
+            close: "Cerrado"
         settings: "Configuración"
         privacy: 
             visible to friends?: "¿Quieres que tus amigos vean tu actividad con el Plan de lectura?"
