--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -718,9 +718,9 @@ sk:
             readings 5 or more: "čítaní"
         stats: 
             friends reading: 
-                one: "%{count} friend subscribed to this plan"
-                few: "%{count} friends subscribed to this plan"
-                other: "%{count} friends subscribed to this plan"
+                one: "%{count} priateľ sa prihlásil na tento plán"
+                few: "%{count} priatelia sa prihlásili na tento plán"
+                other: "%{count} priateľov sa prihlásilo na tento plán"
             friends completed: 
                 one: "%{count} priateľ dokončil tento plán čítania Biblie"
                 few: "%{count} priatelia dokončili tento plán čítania Biblie"
